# darkest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  darkest.code-workspace  dilationScratch.avi  requirements.txt
cpp/api/: CMakeLists.txt  argparse.hpp  command.hpp  ocvio.hpp  ocvui.hpp  text.hpp
cpp/auto-focus/: main.cpp
cpp/blemish-removal/: main.cpp
cpp/camera/: main.cpp
cpp/chroma-keying/: main.cpp
cpp/coin-detection/: main.cpp  mainb.cpp
cpp/dji-fpv/: main.cpp
cpp/document-scanner/: main.cpp
cpp/dug/: main.cpp
cpp/face-annotation-tool/: main.cpp
cpp/face-detection/: main.cpp
cpp/ig-filters/: main.cpp
cpp/image/: main.cpp
cpp/image-alignment/: main.cpp
cpp/img-read/: main.cpp
cpp/maya/: CMakeLists.txt  ComponentNode.h  CtrlCmd.cpp  CtrlCmd.h  CtrlNode.cpp  CtrlNode.h  Ik2bSolver.cpp  Ik2bSolver.h  MainPlugin.cpp  SpaceSwitchNode.h
cpp/maya/api/: CMakeLists.txt  MAnimControl.h  MAttribute.h  MGlobal.h  MObject.h  MPlugin.h  MRigUtils.h  MScene.h  MSolve.h  MText.h
cpp/morphology/: main.cpp
cpp/qrcode/: main.cpp
cpp/slider-resize/: main.cpp
cpp/submission/: main.cpp
cpp/video/: main.cpp
cpp/video-cap/: main.cpp
cpp/videocapture/: main.cpp
python/api/: Darkest.py  DarkestMl.py  DarkestUi.py  Oa.py  __init__.py
python/api/io/: __init__.py  data.py  file.py
python/api/net/: bf_pass.py  wifi.py
python/api/nn/: model.py
python/api/ui/: ocvui.py
python/apps/: Training-From-Scratch_starter_notebook-R2.ipynb  app.py  arpspoof.py  auto-focus.py  blemish-removal.py  camera.py  ccptv.py  cctv.py  chroma-keying.py  code-injector.py  coin-detection-a.py  coin-detection-b.py  convolve_np.py  convolve_tk.py  dilation.py  dnsspoof.py  document-scanner.py  download-interceptor.py  ds_test.py  face-annotation.py  face-detection.py  face_rec_test.py  face_test.py  gradient-decent_tk.py  ig-filters.py  image-alignment.py  image.py  mac-changer.py  macchanger.py  mnist_from_scratch.py  netcut.py  netscan.py  panorama-stiching.py  plots.py  project3-image-segmentation.ipynb  project4-object-detection.ipynb  qrcode.py  resize-dataset.py  sniffer.py  tf_autoencoder_denoise.py  (+13 more)
python/apps/jpnt_coursera_ibm_data_vis/: DV0101EN-Exercise-Dataset-Preprocessing-Exploring-with-Pandas.ipynb  DV0101EN-Exercise-Plotting-directly-with-Matplotlib.jupyterlite.ipynb
python/darkest/: Core.py  Ml.py  Ui.py  __init__.py
python/darkest/api/core/: __init__.py  dataio.py  fileio.py
python/darkest/api/net/: net.py
python/darkest/api/nn/: __init__.py  model.py
python/darkest/api/ui/: __init__.py  ocvui.py
resources/inspiration/surveillance/: Dense-Caption.avif
resources/ml/models/Classifier4/: Classifier4.keras
resources/ml/models/Classifier4/checkpoint/: fingerprint.pb  keras_metadata.pb  saved_model.pb
resources/ml/models/Classifier4/checkpoint/variables/: variables.data-00000-of-00001  variables.index
resources/ml/models/MLP/: MLP.keras
resources/ml/models/MLP/checkpoint/: fingerprint.pb  keras_metadata.pb  saved_model.pb
resources/ml/models/MLP/checkpoint/variables/: variables.data-00000-of-00001  variables.index
resources/ml/models/tfk_ae_reconstruct/checkpoint/: fingerprint.pb  keras_metadata.pb  saved_model.pb
resources/ml/models/tfk_ae_reconstruct/checkpoint/variables/: variables.index
